Resolve scrollbar issue on Windows

--- a/src/app/styles/global.css
+++ b/src/app/styles/global.css
@@ -44,7 +44,3 @@ code {
 a {
     color: inherit;
 }
-
-main {
-    border: 1px solid var(--color-border);
-}
